--- a/data/compilations.yaml
+++ b/data/compilations.yaml
@@ -1,3 +1,4 @@
+Nothing to read here yet
 #- title: "Prof. Sussman's Reading List"
 #  url: https://news.ycombinator.com/item?id=9411408
 #- title: 'Ask HN: Which books are you reading these days? 2015-04-09'
