--- a/data/to-read.yaml
+++ b/data/to-read.yaml
@@ -1,2 +1,6 @@
+- author: Knut Hamsun
+  title:  Sult 
+- author: Aldous Huxley 
+  title:  Brave New World
 -author: Bret Easton Ellis
   title: American Psycho
