--- a/data/compilations.yaml
+++ b/data/compilations.yaml
@@ -1,4 +1,3 @@
-Nothing to read here yet
 #- title: "Prof. Sussman's Reading List"
 #  url: https://news.ycombinator.com/item?id=9411408
 #- title: 'Ask HN: Which books are you reading these days? 2015-04-09'
@@ -9,8 +8,8 @@ Nothing to read here yet
 #  url: http://c2.com/cgi/wiki?AlanKaysReadingList
 #- title: "Bret Victor's Reading List"
 #  url: http://worrydream.com/
-#- title: "Hacker Shelf"
-#  url: http://hackershelf.com/browse/?popular=1
+- title: "Hacker Shelf"
+  url: http://hackershelf.com/browse/?popular=1
 #- title: whichbook
 #  url: http://www.openingthebook.com/whichbook/
 #- title: "Ask HN: What is the most mind blowing book you've ever read?"
